--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,24 @@
-# Dependencies
-node_modules/
-.pnp
-.pnp.js
-
-# Testing
-coverage/
-
-# Production
-build/
-dist/
-
-# Misc
-.DS_Store
+# Environment and credentials
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+lcr.credentials.json
+.lcr_cookies.json
+.lcr_tokens.json
 
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
+# Node
+node_modules/
+dist/
+build/
 *.log
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+venv/
+ENV/
 
 # IDE
 .vscode/
@@ -32,22 +27,10 @@ lerna-debug.log*
 *.swo
 *~
 
-# Python
-.venv/
-__pycache__/
-*.py[cod]
-*$py.class
+# OS
+.DS_Store
+Thumbs.db
 
-# Database
-*.db
-*.sqlite
-*.sqlite3
-
-# Screenshots
-*.png
-*.jpg
-*.jpeg
-
-# LCR Credentials & Cookies (sensitive!)
-.lcr_cookies.json
-lcr.credentials.json
+# Logs
+logs/
+*.log
